# osaka

./: .gitignore  LICENSE  README.md  config.example.py  config_loader.py  main.py  osaka.bat  pyproject.toml  utils.py  video_utils.py
gui/: ControlPanel.py  CropGUI.py  ImageWithCropBox.py  ResizableCropBox.py  __init__.py
